--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-webpack",
+  "name": "Tweets_Followers",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Anton-Logvinenko.github.io/react-webpack/",
+  "homepage": "https://Anton-Logvinenko.github.io/Tweets_Followers/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
