--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.6",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.1.0",
     "react-dropdown": "^1.11.0",
     "react-router-dom": "^6.10.0",
